--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -16,3 +16,10 @@ dummy_test_user_01:
     profile_name: "something"
     email: "something@___.com"
     encrypted_password: "password"
+    
+dummy_test_user_02:
+    first_name: "some"
+    last_name: "one"
+    profile_name: "someone"
+    email: "someone@___.com"
+    encrypted_password: "password"
