Completion of Create an Image Gallery

--- a/test/fixtures/pictures.yml
+++ b/test/fixtures/pictures.yml
@@ -1,13 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  album_id: 
-  user_id: 
-  caption: MyString
-  description: MyText
-
-two:
-  album_id: 
-  user_id: 
+  album: vacation
+  user_id: dummy_test_user_01
   caption: MyString
   description: MyText
