--- a/test/fixtures/albums.yml
+++ b/test/fixtures/albums.yml
@@ -1,9 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user_id: 
-  title: MyString
-
-two:
-  user_id: 
-  title: MyString
+vacation:
+  user: dummy_test_user_01
+  title: Vacation Pictures
